<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">网络竞拍平台</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">欢迎登陆网络竞拍平台</string>
    <string name="user_name">用户名：</string>
    <string name="user_pwd">密码：</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="title_activity_kind">物品分类</string>
    <string name="manage_kind">管理物品分类</string>
    <string name="add_kind">添加分类</string>
    <string name="kind_name">分类名称</string>
    <string name="kind_desc">分类描述</string>
    <string name="title_activity_item">分类下的物品</string>
    <string name="item_name">物品名称</string>
    <string name="item_maxprice">最高价</string>
    <string name="item_initprice">起拍价</string>
    <string name="item_availtime">有效日期</string>
    <string name="item_desc">描述</string>
    <string name="add_bid">竞拍</string>
    <string name="add_bid_message_sucessfully">恭喜您竞拍成功！在有效日期结束后如果没有他人竞拍，该物品就属于您！</string>
    <string name="add_bid_message_failed">竞拍价不能小于物品当前的最高价！</string>
    <string name="add_bid_message_error">竞拍失败！请重试!</string>
    <string name="main_tab1_title">分类</string>
    <string name="main_tab2_title">热门</string>
    <string name="main_tab3_title">流拍</string>
    <string name="main_tab4_title">个人</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>